kustomize/bases/whoami/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      restartPolicy: Always
      containers:
        - name: whoami
          image: docker.io/containous/whoami:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
