kustomize/bases/whoami/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
